# NetDiagnosticsTool

./: .gitignore  CMakeLists.txt  Instructions.docx  NetDiagnosticsTool_Report.docx  get_connections_linux.sh  get_connections_win.bat  runNetDiagnosticsTool.sh
Analysis/: data_analysis.py  visualize_trends.py
Data/: reset_db.bat  reset_db.sh
Scripts/: monitor_network_stats.sh  monitor_system_stats.sh
Source/: CCommandLineParser.cpp  CCommandLineParser.h  CDatabaseManager.cpp  CDiagnosticUtils.cpp  CDiagnosticUtils.h  CICommandLineParser.h  CNetworkDiagnostics.cpp  CNetworkDiagnostics.h  CommandExecutor.cpp  CommandExecutor.h  CommandLineParser.cpp  CommandLineParser.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseUtils.cpp  DatabaseUtils.h  DiagnosticUtils.cpp  DiagnosticsController.cpp  DiagnosticsController.h  INetworkDiagnostics.h  INetworkStatsMonitor.h  IStatisticsMonitor.h  ISystemStatsMonitor.h  NetDiagnosticsTool.cpp  NetDiagnosticsTool.h  NetworkDiagnostics.cpp  NetworkDiagnostics.h  NetworkMonitorLinux.cpp  NetworkMonitorLinux.h  NetworkMonitorWindows.cpp  NetworkMonitorWindows.h  StatisticsMonitorFactory.cpp  StatisticsMonitorFactory.h  SystemMonitorLinux.cpp  SystemMonitorLinux.h  SystemMonitorWindows.cpp  SystemMonitorWindows.h
